# Simple-ToDo-List

./: CMakeLists.txt  README.md  main.cpp  task.cpp  task.h  todolist.cpp  window.cpp
